--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,21 +9,25 @@ body {
   grid-auto-rows: minmax(10px, auto);
 }
 
+.aboutHeaders { /* This applies to nearly all H2's throughout the site. */
+  margin-bottom: 15px;
+  text-align: center;
+  font-size: 3.5em;
+}
+
 /*===========
 HEADER STYLES
 ===========*/
 
 header {
-  display: flex;
-  margin: auto;
-  flex-direction: column;
-  align-items: center;
+  position: fixed;
 }
 
-.aboutHeaders { /* This applies to nearly all H2's throughout the site. */
-  margin-bottom: 15px;
-  text-align: center;
-  font-size: 3.5em;
+#home-page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 25px;
 }
 
 .titleHome {
